Update fix on mobile UI Design

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -75,10 +75,77 @@
 
 // Smartphones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
-  
-   
+  main {
+
+    align-items: center;
+    text-align: center;
+
+    .lg-heading {
+      line-height: 1;
+      margin-bottom: 2rem;
+      font-size: 3rem;
+    }
+
+  }
+
+  ul.menu-nav,
+  div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  .menu-nav {
+    height: 75vh;
+    transform: translate3d(-100%, 0, 0);
+    font-size: 24px;
+  }
+
+  .menu-branding {
+    height: 25vh;
+    transform: translate3d(100%, 0, 0);
+
+    .portrait {
+      background: url(../img/portrait-small.jpg);
+      background-position: center;
+      background-size: 145px;
+      width: 180px;
+      height: 180px;
+    }
+  }
+
+  .about-info {
+
+    align-items: center;
+    text-align: center;
+
+    img {
+      width: 180px;
+      height: 180px;
+    }
+
+    .bio {
+      p {
+        font-size: 18px;
+        display: inline-flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        white-space: initial;
+      }
+    }
+
+    .job {
+      p {
+        display: inline-flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        white-space: initial;
+      }
+    }
   }
 
   .projects {
